# voxel

./: Cargo.toml  atlas.xcf  build.rs
src/: array3d.rs  chunk.rs  chunk_cache.rs  chunk_maker.rs  chunk_source.rs  chunk_store.rs  game.rs  halton.rs  main.rs  mesher.rs  stage.rs  texture.rs
src/block/: mod.rs
src/math/: box.rs  box3.rs  iter.rs  linear.rs  mod.rs  planar.rs
src/shader/: instanced-quad-vert.glsl  mod.rs  test-f.glsl  test-v.glsl
